--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://cdn.tiny.cloud/1/695bhx4ub7gr6sm0dpjrx7dp4copd1epv0m1oopvn61co8m3/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
 
